--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,68 +2,57 @@ name: CI
 
 on: 
   push:
-    path:
-      - 'ge/*'
-      - 'tests/*'
+    paths:
+      - 'ge/**'
+      - 'tests/**'
+      - 'setup.py'
+      - '.github/workflows/ci.yml'
   pull_request:
-    path:
-      - 'ge/*'
-      - 'tests/*'
+    paths:
+      - 'ge/**'
+      - 'tests/**'
+      - 'setup.py'
+      - '.github/workflows/ci.yml'
       
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: python:${{ matrix.python-version }}
-    timeout-minutes: 180
+    timeout-minutes: 30
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.6,3.7,3.8]
-        tf-version: [1.4.0,1.15.0,2.5.0,2.6.0,2.7.0,2.8.0,2.9.0]
-        
-        exclude:
-          - python-version: 3.7
-            tf-version: 1.4.0
-          - python-version: 3.7
-            tf-version: 1.15.0
-          - python-version: 3.8
-            tf-version: 1.4.0
-          - python-version: 3.8
-            tf-version: 1.14.0
-          - python-version: 3.8
-            tf-version: 1.15.0
-          - python-version: 3.6
-            tf-version: 2.7.0
-          - python-version: 3.6
-            tf-version: 2.8.0
-          - python-version: 3.6
-            tf-version: 2.9.0
-          - python-version: 3.9
-            tf-version: 1.4.0
-          - python-version: 3.9
-            tf-version: 1.15.0
-          - python-version: 3.9
-            tf-version: 2.2.0
+        python-version: ['3.8']
+        tf-version: ['2.5.0', '2.6.0', '2.8.0', '2.9.0']
+
     steps:
     
-    # We might need to handle the case where the python image doesn't have nodejs for checkout, but checkout v3 uses node 16 which typically has native binaries fallback.
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    
+    - name: Setup python environment
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
-        pip3 install -q tensorflow==${{ matrix.tf-version }}
-        pip install -q protobuf==3.19.0
+        pip install --upgrade pip
+        pip install -q "numpy<1.24.0"
+        pip install -q tensorflow==${{ matrix.tf-version }}
+        pip install -q "protobuf>=3.19.0,<4.0.0"
         pip install -q requests
         pip install -e .
+
     - name: Test with pytest
-      timeout-minutes: 180
+      timeout-minutes: 20
       run: |
         pip install -q pytest
         pip install -q pytest-cov
         pip install -q python-coveralls
         pytest --cov=ge --cov-report=xml
+
     - name: Upload coverage to Codecov  
-      uses: codecov/codecov-action@v3.1.0
+      uses: codecov/codecov-action@v4
       with:
         token: ${{secrets.CODECOV_TOKEN}}
         file: ./coverage.xml
